--- a/index.html
+++ b/index.html
@@ -34,13 +34,7 @@
 <body>
 <div class="container">
     <div class="page-header">
-        <h1>CodeStory Challenge 2013</h1>
-    </div>
-    <div class="row">
-        <div class="span12">
-            <h3>Historique des scores</h3>
-            <div id="scores-timeseries"></div>
-        </div>
+        <h1>JUGL Challenge 2013</h1>
     </div>
     <div class="row">
         <div class="span6" ng-controller="CodeStoryCtrl">
