--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html ng-app="CodeStory">
 <head>
-    <title>CodeStory Challenge 2013</title>
+    <title>JUGL Challenge 2013</title>
     <meta charset='utf-8'>
-    <link type='image/png' rel='shortcut icon' href='fusee-16x16.png'/>
     <link href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.2.2/css/bootstrap-combined.min.css" rel="stylesheet">
     <style>
         .table td {
